fix z-index & animation timing

--- a/src/assets/styles/login/login.less
+++ b/src/assets/styles/login/login.less
@@ -76,6 +76,8 @@
 	height: 400px;
 	text-align: center;
 	line-height: 50px;
+	position: relative;
+	z-index: 2;
 }
 
 .container h1 {
